# SDLActivity

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: testmultiaudio.c
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
sdl2/: CMakeLists.txt  build.gradle
sdl2/src/main/: AndroidManifest.xml
sdl2/src/main/cpp/src/core/android/: SDL_android.c
